--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -1,36 +1,21 @@
-name: Publish to PyPI
+# .github/workflows/publish-pypi.yml
+name: 🚀 Publish Python Package
 
 on:
   push:
     tags:
-      - 'v*' # Only trigger on version tags (e.g., v1.0.0)
+      - 'v*.*.*'    # e.g. v0.0.3
 
-env:
-  PYTHON_VERSION: "3.9"  # Workflow-wide variable
-  
-jobs:   
+jobs:
   publish:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-
-    - name: Build package
-      run: python -m build
-
-    - name: Publish to PyPI
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: twine upload dist/*
+      - uses: actions/checkout@v3
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+      - name: Configure PyPI credentials
+        run: |
+          poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
+      - name: Publish
+        run: |
+          poetry publish --build --no-interaction
