--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -1,4 +1,4 @@
-name: 📦 Update dependencies
+name: 📦 Update dependencies (NEW)
 
 on:
   workflow_dispatch:    # Manual trigger
@@ -49,9 +49,9 @@ jobs:
         if: steps.git-check.outputs.changes == 'true'
         uses: peter-evans/create-pull-request@v5
         with:
-          commit-message: chore(deps): regenerate requirements
+          commit-message: "chore(deps): regenerate requirements"
           branch: update-dependencies
-          title: chore(deps): regenerate dependencies
+          title: "chore(deps): regenerate dependencies"
           labels: dependencies, automated
           body: |
             This PR updates:
