--- a/requirements.txt
+++ b/requirements.txt
@@ -154,13 +154,13 @@ blinker==1.9.0 \
 botbuilder==0.0.1 \
     --hash=sha256:fbfd13dae1cce4f6595826cdbbbfe8b5f30cbf6ac622294004b114b0b278082c
     # via -r requirements.in
-boto3==1.38.2 \
-    --hash=sha256:53c8d44b231251fa9421dd13d968236d59fe2cf0421e077afedbf3821653fb3b \
-    --hash=sha256:ef3237b169cd906a44a32c03b3229833d923c9e9733355b329ded2151f91ec0b
+boto3==1.38.3 \
+    --hash=sha256:655d51abcd68a40a33c52dbaa2ca73fc63c746b894e2ae22ed8ddc1912ddd93f \
+    --hash=sha256:9218f86e2164e1bddb75d435bbde4fa651aa58687213d7e3e1b50f7eb8868f66
     # via -r requirements.in
-botocore==1.38.2 \
-    --hash=sha256:5d9cffedb1c759a058b43793d16647ed44ec87072f98a1bd6cd673ac0ae6b81d \
-    --hash=sha256:b688a9bd17211a1eaae3a6c965ba9f3973e5435efaaa4fa201f499d3467830e1
+botocore==1.38.3 \
+    --hash=sha256:790f8f966201781f5fcf486d48b4492e9f734446bbf9d19ef8159d08be854243 \
+    --hash=sha256:96f823240fe3704b99c17d1d1b2fd2d1679cf56d2a55b095f00255b76087cbf0
     # via
     #   boto3
     #   s3transfer
@@ -812,9 +812,9 @@ langchain-text-splitters==0.3.8 \
     --hash=sha256:116d4b9f2a22dda357d0b79e30acf005c5518177971c66a9f1ab0edfdb0f912e \
     --hash=sha256:e75cc0f4ae58dcf07d9f18776400cf8ade27fadd4ff6d264df6278bb302f6f02
     # via langchain
-langsmith==0.3.34 \
-    --hash=sha256:5927d726a78dbd1aa387be024ab76efa67444aec9b21b14c1de8214a233bb166 \
-    --hash=sha256:c99add514aecc4295148f8910fab3b0c2632444605422a80aa625b65da502515
+langsmith==0.3.37 \
+    --hash=sha256:bdecca4eb48ba1799e821a33dbdca318ab202faa71a5bfa7d2358be6c3fd7eeb \
+    --hash=sha256:d49d9a12d24d3984d5b3e2b5915b525b4a29a4706ea9cadde43c980fba43fab0
     # via
     #   -r requirements.in
     #   langchain
@@ -1527,9 +1527,7 @@ protobuf==6.30.2 \
     --hash=sha256:acec579c39c88bd8fbbacab1b8052c793efe83a0a5bd99db4a31423a25c0a0e2 \
     --hash=sha256:ae86b030e69a98e08c77beab574cbcb9fff6d031d57209f574a5aea1445f4b51 \
     --hash=sha256:b12ef7df7b9329886e66404bef5e9ce6a26b54069d7f7436a0853ccdeb91c103
-    # via
-    #   -r requirements.in
-    #   qdrant-client
+    # via qdrant-client
 ptyprocess==0.7.0 \
     --hash=sha256:4b41f3967fce3af57cc7e94b888626c18bf37a083e3651ca8feeb66d492fef35 \
     --hash=sha256:5c5d0a3b48ceee0b48485e0c26037c0acd7d29765ca3fbb5cb3831d347423220
