--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langswarm"
-version = "0.0.17"
+version = "0.0.18"
 description = "A multi-agent ecosystem for large language models (LLMs) and autonomous systems."
 readme = "README.md"
 authors = ["Alexander Ekdahl <alexander.ekdahl@gmail.com>"]
@@ -18,6 +18,7 @@ redis = "*"
 cerberus = "*"
 tiktoken = "*"
 google-cloud-pubsub = "*"
+simpleeval = "*"
 
 [tool.poetry.extras]
 dev = [
