--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,7 @@
 aiohttp==3.11.18
 aioredis==2.0.1
 botbuilder==0.0.1
-boto3==1.38.3
+boto3==1.38.8
 Cerberus==1.3.7
 discord.py==2.5.2
 docker_py==1.10.6
@@ -11,19 +11,20 @@ functions_framework==3.8.2
 ipython==8.12.3
 ipywidgets==8.1.6
 Jinja2==3.1.6
-langchain_community==0.3.22
-langchain_openai==0.3.14
-langsmith==0.3.37
-llama_index==0.12.33
+langchain_community==0.3.23
+langchain_openai==0.3.16
+langsmith==0.3.42
+llama_index==0.12.34
 nest_asyncio==1.6.0
-openai==1.76.0
+openai==1.77.0
 pinecone==6.0.2
-pydantic==2.11.3
+pydantic==2.11.4
 pytest==8.3.5
 python-telegram-bot==22.0
 PyYAML==6.0.2
 qdrant_client==1.14.2
 Requests==2.32.3
+simpleeval==1.0.3
 slack_bolt==1.23.0
 tiktoken==0.9.0
 transformers==4.51.3
