--- a/requirements.txt
+++ b/requirements.txt
@@ -109,6 +109,10 @@ aiosignal==1.3.2 \
     --hash=sha256:45cde58e409a301715980c2b01d0c28bdde3770d8290b5eb2173759d9acb31a5 \
     --hash=sha256:a8c255c66fafb1e499c9351d0bf32ff2d8a0321595ebac3b93713656d2436f54
     # via aiohttp
+aiosqlite==0.21.0 \
+    --hash=sha256:131bb8056daa3bc875608c631c678cda73922a2d4ba8aec373b19f18c17e7aa3 \
+    --hash=sha256:2549cf4057f95f53dcba16f2b64e8e2791d7e1adedb13197dd8ed77bb226d7d0
+    # via llama-index-core
 annotated-types==0.7.0 \
     --hash=sha256:1f02e8b43a8fbbc3f3e0d4f0f4bfc8131bcb4eebe8849b8e5c773f3a1c582a53 \
     --hash=sha256:aff07c09a53a08bc8cfccb9c85b05f1aa9a2a6f23728d790723543408344ce89
@@ -154,13 +158,13 @@ blinker==1.9.0 \
 botbuilder==0.0.1 \
     --hash=sha256:fbfd13dae1cce4f6595826cdbbbfe8b5f30cbf6ac622294004b114b0b278082c
     # via -r requirements.in
-boto3==1.38.8 \
-    --hash=sha256:6bbc75bb51be9c5a33d07a4adf13d133c60f77b7c47bef1c46fda90b1297a867 \
-    --hash=sha256:f3a4d79f499f567d327d2d8846d02ad18244d2927f88858a42a2438f52d9a0ef
+boto3==1.38.18 \
+    --hash=sha256:38ecb477ba9fc4edcf97133bf1fe33261ebec6c58d59982abff3cea167624211 \
+    --hash=sha256:bd723bfbc109bdc63e017ead74dd22f2cf8a7515e24e730870b8a70af823e626
     # via -r requirements.in
-botocore==1.38.8 \
-    --hash=sha256:68d739300cc94232373517b27c5570de6ae6d809a2db644f30219f5c8e0371ce \
-    --hash=sha256:f6ae08a56fe94e18d2aa223611a3b5e94123315d0cb3cb85764b029b2326c710
+botocore==1.38.18 \
+    --hash=sha256:0b5ddf195f15218f30ec63d8aba9e55cf60af2984c068276b9fd206059043310 \
+    --hash=sha256:ae4c97383e797e9648f8721bb0217fd9efd228e9fbc661d83dc0959be083ec5c
     # via
     #   boto3
     #   s3transfer
@@ -363,9 +367,9 @@ filetype==1.2.0 \
     --hash=sha256:66b56cd6474bf41d8c54660347d37afcc3f7d1970648de365c102ef77548aadb \
     --hash=sha256:7ce71b6880181241cf7ac8697a2f1eb6a8bd9b429f7ad6d27b8db9ba5f1c2d25
     # via llama-index-core
-flask==3.1.0 \
-    --hash=sha256:5f873c5184c897c8d9d1b05df1e3d01b14910ce69607a117bd3277098a5836ac \
-    --hash=sha256:d667207822eb83f1c4b50949b1623c8fc8d51f2341d65f72e1a1815397551136
+flask==3.1.1 \
+    --hash=sha256:07aae2bb5eaf77993ef57e357491839f5fd9f4dc281593a81a9e4d79a24f295c \
+    --hash=sha256:284c7b8f2f58cb737f0cf1c30fd7eaf0ccfcde196099d24ecede3fc2005aa59e
     # via
     #   -r requirements.in
     #   functions-framework
@@ -483,9 +487,9 @@ fsspec==2025.3.2 \
     # via
     #   huggingface-hub
     #   llama-index-core
-functions-framework==3.8.2 \
-    --hash=sha256:109bcdca01244067052a605536b44d042903b3805d093cd32e343ba5affffc90 \
-    --hash=sha256:ecbe8e4566efca9ed1718f210ac92d47fc47ec3a448d2bca3b4bb5888bceca08
+functions-framework==3.8.3 \
+    --hash=sha256:95827698469e3979518d52e32def2f11230465877fef32afd49045013b2a469c \
+    --hash=sha256:fd352272c02ee08b4a3445e234213e43fbdd350365d98e2cce13e1575490bffe
     # via -r requirements.in
 greenlet==3.2.1 \
     --hash=sha256:04b4ec7f65f0e4a1500ac475c9343f6cc022b2363ebfb6e94f416085e40dea15 \
@@ -669,9 +673,9 @@ ipython==8.12.3 \
     # via
     #   -r requirements.in
     #   ipywidgets
-ipywidgets==8.1.6 \
-    --hash=sha256:446e7630a1d025bdc7635e1169fcc06f2ce33b5bd41c2003edeb4a47c8d4bbb1 \
-    --hash=sha256:d8ace49c66f14419fc66071371b99d01bed230bbc15d8a60233b18bfbd782851
+ipywidgets==8.1.7 \
+    --hash=sha256:15f1ac050b9ccbefd45dccfbb2ef6bed0029d8278682d569d71b8dd96bee0376 \
+    --hash=sha256:764f2602d25471c213919b8a1997df04bef869251db4ca8efba1b76b1bd9f7bb
     # via -r requirements.in
 itsdangerous==2.2.0 \
     --hash=sha256:c6242fc49e35958c8b15141343aa660db5fc54d4f13a1db01a3f5891b98700ef \
@@ -784,29 +788,29 @@ jsonpointer==3.0.0 \
     --hash=sha256:13e088adc14fca8b6aa8177c044e12701e6ad4b28ff10e65f2267a90109c9942 \
     --hash=sha256:2b2d729f2091522d61c3b31f82e11870f60b68f43fbc705cb76bf4b832af59ef
     # via jsonpatch
-jupyterlab-widgets==3.0.14 \
-    --hash=sha256:54c33e3306b7fca139d165d6190dc6c0627aafa5d14adfc974a4e9a3d26cb703 \
-    --hash=sha256:bad03e59546869f026e537e0d170e454259e6dc7048e14041707ca31e523c8a1
+jupyterlab-widgets==3.0.15 \
+    --hash=sha256:2920888a0c2922351a9202817957a68c07d99673504d6cd37345299e971bb08b \
+    --hash=sha256:d59023d7d7ef71400d51e6fee9a88867f6e65e10a4201605d2d7f3e8f012a31c
     # via ipywidgets
-langchain==0.3.24 \
-    --hash=sha256:596c5444716644ddd0cd819fb2bc9d0fd4221503b219fdfb5016edcfaa7da8ef \
-    --hash=sha256:caf1bacdabbea429bc79b58b118c06c3386107d92812e15922072b91745f070f
+langchain==0.3.25 \
+    --hash=sha256:931f7d2d1eaf182f9f41c5e3272859cfe7f94fc1f7cef6b3e5a46024b4884c21 \
+    --hash=sha256:a1d72aa39546a23db08492d7228464af35c9ee83379945535ceef877340d2a3a
     # via langchain-community
-langchain-community==0.3.23 \
-    --hash=sha256:7b5328e749df6bbaf8e60c53d810a95ab22f2d2262911b206b0fb582d58350b7 \
-    --hash=sha256:afb4b34d8b75fc00f78b2270e988bb48fff96b333d23fae05ab32d012940973f
+langchain-community==0.3.24 \
+    --hash=sha256:62d9e8cf9aadf35182ec3925f9ec1c8e5e84fb4f199f67a01aee496d289dc264 \
+    --hash=sha256:b6cdb376bf1c2f4d2503aca20f8f35f2d5b3d879c52848277f20ce1950e7afaf
     # via -r requirements.in
-langchain-core==0.3.58 \
-    --hash=sha256:266f90d2a079fe9510190ad3be88bd993baad43e6cee0f822a883767a4bfdd5b \
-    --hash=sha256:6ee2282b02fa65bf4ee1afa869d431505536757ff2f1f9f0b432d8ca755d66c6
+langchain-core==0.3.60 \
+    --hash=sha256:2ccdf06b12e699b1b0962bc02837056c075b4981c3d13f82a4d4c30bb22ea3dc \
+    --hash=sha256:63dd1bdf7939816115399522661ca85a2f3686a61440f2f46ebd86d1b028595b
     # via
     #   langchain
     #   langchain-community
     #   langchain-openai
     #   langchain-text-splitters
-langchain-openai==0.3.16 \
-    --hash=sha256:4e423e39d072f1432adc9430f2905fe635cc019f01ad1bdffa5ed8d0dda32149 \
-    --hash=sha256:eae74a6758d38a26159c5fde5abf8ef313e6400efb01a08f12dd7410c9f4fd0f
+langchain-openai==0.3.17 \
+    --hash=sha256:10bcdfac3edb3dea4a8aabb12f01566e5ff8756634cc52aa169c62e4c4b73801 \
+    --hash=sha256:d4d9cf945e2453ee5895ccd12fd8a3ea9131a0f6130dcc21427c77cc2206b1c0
     # via -r requirements.in
 langchain-text-splitters==0.3.8 \
     --hash=sha256:116d4b9f2a22dda357d0b79e30acf005c5518177971c66a9f1ab0edfdb0f912e \
@@ -830,9 +834,9 @@ llama-cloud-services==0.6.15 \
     --hash=sha256:912799d9cdcf48074145c6781f40a6dd7dadb6344ecb30b715407db85a0e675e \
     --hash=sha256:c4e24dd41f2cde17eeba7750d41cc70fe26e1179c03ae832122d762572e53de6
     # via llama-parse
-llama-index==0.12.34 \
-    --hash=sha256:6a94ca245606c9a8f98e7c36bd3269176bf3e3430066876e7739a8cdd3df1ffe \
-    --hash=sha256:da76964c15e283e91b10e0dfa8121a4d133bbe9a63cc84641628a332df346e66
+llama-index==0.12.36 \
+    --hash=sha256:08bfa41c274672fe5aa4bafa6a6cbda4344141c4aa42517d842a5daf94ffcfe5 \
+    --hash=sha256:3f0c4f0d1478c9f136760ef2bce65f03fa21a0a7402b537bcccbedf0ab7387bf
     # via -r requirements.in
 llama-index-agent-openai==0.4.6 \
     --hash=sha256:4103e479c874cb3426aa59a13f91b6e2dc6b350c51457966631f8bdaf9a6a8e8 \
@@ -844,9 +848,9 @@ llama-index-cli==0.4.1 \
     --hash=sha256:3f97f1f8f5f401dfb5b6bc7170717c176dcd981538017430073ef12ffdcbddfa \
     --hash=sha256:6dfc931aea5b90c256e476b48dfac76f48fb2308fdf656bb02ee1e4f2cab8b06
     # via llama-index
-llama-index-core==0.12.34.post1 \
-    --hash=sha256:1673566b134c75e99f5f64e9ec8ca979078bee2e70efa40fd009562b68c18307 \
-    --hash=sha256:2b8262b5ec6537d979e7fb1b3c0e56747055ae7321b8dcb184ef43eee1df6396
+llama-index-core==0.12.36 \
+    --hash=sha256:03160629ea1a3da5ed543f0b9fb28c2fcded18702adf2a682a208c1c48e0d0ba \
+    --hash=sha256:17bc5174e4acc2650c1638eda63635c1293660bb6a50743d39979d131c8d8c92
     # via
     #   llama-cloud-services
     #   llama-index
@@ -969,6 +973,7 @@ markupsafe==3.0.2 \
     --hash=sha256:f8b3d067f2e40fe93e1ccdd6b2e1d16c43140e76f02fb1319a05cf2b79d99430 \
     --hash=sha256:fcabf5ff6eea076f859677f5f0b6b5c1a51e70a376b0579e0eadef8db48c6b50
     # via
+    #   flask
     #   jinja2
     #   werkzeug
 marshmallow==3.26.1 \
@@ -1159,9 +1164,9 @@ numpy==2.0.2 \
     #   pandas
     #   qdrant-client
     #   transformers
-openai==1.77.0 \
-    --hash=sha256:07706e91eb71631234996989a8ea991d5ee56f0744ef694c961e0824d4f39218 \
-    --hash=sha256:897969f927f0068b8091b4b041d1f8175bcf124f7ea31bab418bf720971223bc
+openai==1.79.0 \
+    --hash=sha256:d5050b92d5ef83f869cb8dcd0aca0b2291c3413412500eec40c66981b3966992 \
+    --hash=sha256:e3b627aa82858d3e42d16616edc22aa9f7477ee5eb3e6819e9f44a961d899a4c
     # via
     #   -r requirements.in
     #   langchain-openai
@@ -1686,9 +1691,9 @@ python-dotenv==1.1.0 \
     # via
     #   llama-cloud-services
     #   pydantic-settings
-python-telegram-bot==22.0 \
-    --hash=sha256:23237f778655e634f08cfebbada96ed3692c2bdd3c20c122e90a6d606d6a4516 \
-    --hash=sha256:acf86f28d86d81cab736177d2988e5bcb27f2248137efd62e02c46e9ba1fe44c
+python-telegram-bot==22.1 \
+    --hash=sha256:71afd091fde9037ac44728c2768eb958682140dcc350900a191da0e9cef319d3 \
+    --hash=sha256:b6c7fc1f3635cef6aff0c431827407cafde183e7e1992060edeacc2bf08d23d8
     # via -r requirements.in
 pytz==2025.2 \
     --hash=sha256:360b9e3dbb49a209c21ad61809c7fb453643e048b38924c765813546746e81c3 \
@@ -2118,15 +2123,16 @@ transformers==4.51.3 \
     --hash=sha256:e292fcab3990c6defe6328f0f7d2004283ca81a7a07b2de9a46d67fd81ea1409 \
     --hash=sha256:fd3279633ceb2b777013234bbf0b4f5c2d23c4626b05497691f00cfda55e8a83
     # via -r requirements.in
-twilio==9.5.2 \
-    --hash=sha256:072fc85145ab26a922be0a0ef544cbdae2771e11143bc78e919a1dfbfd84a63a \
-    --hash=sha256:55d57d9c58e4ce5fa8e11943e42d76705ac2aaa7eaeab49946521df6f245e936
+twilio==9.6.1 \
+    --hash=sha256:441fdab61b9a204eef770368380b962cbf08dc0fe9f757fe4b1d63ced37ddeed \
+    --hash=sha256:bb80b31d4d9e55c33872efef7fb99373149ed4093f21c56cf582797da45862f5
     # via -r requirements.in
 typing-extensions==4.13.2 \
     --hash=sha256:a439e7c04b49fec3e5d3e2beaa21755cadbbdc391694e28ccdd36ca4a1408f8c \
     --hash=sha256:e6c81219bd689f51865d9e372991c540bda33a0379d5573cddb9a3a23f7caaef
     # via
     #   aioredis
+    #   aiosqlite
     #   anyio
     #   beautifulsoup4
     #   fastapi
