--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,17 @@
-[pytest]
-filterwarnings =
-    ignore:Call to deprecated create function FieldDescriptor\(\):DeprecationWarning:google\.iam\.v1\.policy_pb2
-    ignore::DeprecationWarning:google\.cloud\.pubsub_v1\.proto\.pubsub_pb2
-    
-    # Pillow deprecations (Keras)
-    ignore:.*is deprecated and will be removed in Pillow 10.*:DeprecationWarning:keras\.utils\.image_utils
+[tool:pytest]
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts = -v --tb=short --strict-markers --disable-warnings
 
-    # NumPy deprecation warnings (np.bool8)
-    ignore:`np\.bool8` is a deprecated alias for `np\.bool_`:DeprecationWarning:tensorflow\.python\.framework\.dtypes
-    ignore:`np\.bool8` is a deprecated alias for `np\.bool_`:DeprecationWarning:tensorboard\.compat\.tensorflow_stub\.dtypes
+# Exclude problematic test files that are not actual tests
+norecursedirs = .git .tox dist build *.egg
 
-    # imp module deprecation (flatbuffers)
-    ignore:the imp module is deprecated.*:DeprecationWarning:flatbuffers\.compat
+# Test markers for categorization
+markers =
+    isolation_sensitive: Tests that may have isolation issues in large test suites
+    slow: Tests that take a long time to run
+    integration: Integration tests that test multiple components
+    unit: Unit tests that test individual components
+    requires_api: Tests that require external API access
