--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langswarm"
-version = "0.0.54.dev6"
+version = "0.0.54.dev7"
 description = "A multi-agent ecosystem for large language models (LLMs) and autonomous systems."
 readme = "README.md"
 authors = ["Alexander Ekdahl <alexander.ekdahl@gmail.com>"]
@@ -60,11 +60,27 @@ botbuilder = "^0.0.1"
 # Daytona integration
 daytona = {version = "^0.10.5", optional = true}
 
+# BigQuery Vector Search integration
+google-cloud-bigquery = {version = "^3.0.0", optional = true}
+google-cloud-bigquery-storage = {version = "^2.0.0", optional = true}
+
 [tool.poetry.extras]
 dev = [
   "pytest",
   "black",
   "flake8",
+]
+bigquery = [
+  "google-cloud-bigquery",
+  "google-cloud-bigquery-storage",
+]
+daytona = [
+  "daytona",
+]
+all = [
+  "google-cloud-bigquery",
+  "google-cloud-bigquery-storage", 
+  "daytona",
 ]
 
 [build-system]
